--- a/Packages/com.nowsprinting.roslynanalyzers/AutoReferenced/RoslynAnalyzers.AutoReferenced.asmdef
+++ b/Packages/com.nowsprinting.roslynanalyzers/AutoReferenced/RoslynAnalyzers.AutoReferenced.asmdef
@@ -1,15 +1,13 @@
 {
-    "name": "RoslynAnalyzers.Editor",
+    "name": "RoslynAnalyzers.AutoReferenced",
     "rootNamespace": "",
     "references": [],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
