--- a/Packages/com.nowsprinting.roslynanalyzers/NoAutoReferenced/RoslynAnalyzers.NoAutoReferenced.asmdef
+++ b/Packages/com.nowsprinting.roslynanalyzers/NoAutoReferenced/RoslynAnalyzers.NoAutoReferenced.asmdef
@@ -1,15 +1,13 @@
 {
-    "name": "Referenced",
+    "name": "RoslynAnalyzers.NoAutoReferenced",
     "rootNamespace": "",
-    "references": [
-        "GUID:1a93889869d954e05a51f989fd826d73"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
