--- a/Assets/Scripts/NotReferenced/NotReferenced.asmdef
+++ b/Assets/Scripts/NotReferenced/NotReferenced.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "NotReferenced"
+    "name": "NotReferenced",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
