--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -12,9 +12,7 @@ jobs:
         targetPlatform:
           - StandaloneLinux64
         unityVersion: # Available versions see: https://game.ci/docs/docker/versions
-          - 2020.3.4f1
-          - 2020.2.5f1
-          - 2021.1.0f1
+          - 2020.2.7f1
 
     steps:
       # Checkout
