--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Packages/com.nowsprinting.analyzer-in-package"]
-	path = Packages/com.nowsprinting.analyzer-in-package
+[submodule "LocalPackages/com.nowsprinting.analyzer-in-package"]
+	path = LocalPackages/com.nowsprinting.analyzer-in-package
 	url = git@github.com:nowsprinting/analyzer-in-package.git
