--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.nowsprinting.analyzer-in-localpackage": "file:../LocalPackages/com.nowsprinting.analyzer-in-localpackage",
+    "com.nowsprinting.analyzer-in-package": "file:../LocalPackages/com.nowsprinting.analyzer-in-package",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "3.0.6",
     "com.unity.ide.visualstudio": "2.0.7",
