--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "com.nowsprinting.analyzer-in-localpackage": "file:../LocalPackages/com.nowsprinting.analyzer-in-localpackage",
-    "com.nowsprinting.analyzer-in-package": "file:../LocalPackages/com.nowsprinting.analyzer-in-package",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "3.0.6",
     "com.unity.ide.visualstudio": "2.0.7",
@@ -40,7 +39,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.nowsprinting.analyzer-in-package": "https://github.com/nowsprinting/analyzer-in-package.git#importer_example"
   },
   "scopedRegistries": [
     {
@@ -50,5 +50,8 @@
         "com.openupm"
       ]
     }
+  ],
+  "testables": [
+    "com.nowsprinting.analyzer-in-package"
   ]
 }
