--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -40,7 +40,8 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0",
     "com.nowsprinting.analyzer-in-localpackage": "file:../LocalPackages/com.nowsprinting.analyzer-in-localpackage",
-    "com.nowsprinting.analyzer-in-package": "https://github.com/nowsprinting/analyzer-in-package.git"
+    "com.nowsprinting.analyzer-in-package": "https://github.com/nowsprinting/analyzer-in-package.git",
+    "nunit.analyzers.unity": "https://github.com/nowsprinting/nunit.analyzers.unity.git"
   },
   "scopedRegistries": [
     {
