--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -40,16 +40,14 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "nunit.analyzers.unity": "3.2.0"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
       "name": "package.openupm.com",
       "url": "https://package.openupm.com",
       "scopes": [
-        "com.openupm",
-        "nunit.analyzers.unity"
+        "com.openupm"
       ]
     }
   ]
