--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,7 +3,7 @@
     "com.nowsprinting.analyzer-in-localpackage": "file:../LocalPackages/com.nowsprinting.analyzer-in-localpackage",
     "com.nowsprinting.analyzer-in-package": "https://github.com/nowsprinting/analyzer-in-package.git",
     "com.unity.collab-proxy": "1.3.9",
-    "com.unity.ide.rider": "https://github.com/van800/com.unity.ide.rider.git?path=/Packages/com.unity.ide.rider#3.0.8",
+    "com.unity.ide.rider": "3.0.9",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.test-framework": "1.1.24",
